@@ -10,4 +10,6 @@ desc: |
  * Report IO errors in UMC frontend.
  * Fix file permissions of backup directory.
  * Fix parsing memory and disk capacity.
-bug: [47617,22695,47741,36661]
+ * The target hosts for live migration can now be configured even when the
+   virtual machine is running.
+bug: [47617,22695,47741,36661,48199]
